feat: 新增退出家庭接口及相关文档更新
